--- a/www/index.html
+++ b/www/index.html
@@ -113,9 +113,9 @@
       <div class="modal-body">
         <h4>About</h4>
         <p>Developed by <a href="https://www.autodesk.com/support-offerings/enterprise">Premium Support Services</a> team at Autodesk, Inc.</p>
-        <p>Get the <a href="https://git.autodesk.com/mazerab/fusion360appstore-design.automation-nodejs-pdf.exporter" target="_blank">source code</a>.</p>
+        <p>Get the <a href="https://github.com/mazerab/design.automation-nodejs-dwg-data.extractor" target="_blank">source code</a>.</p>
         <h4>Contact us</h4>
-        <p>Question? Suggestions? <a href="mailto:fusion360apps@autodesk.com">Contact us</a> directly or see our <a href="https://git.autodesk.com/mazerab/fusion360appstore-design.automation-nodejs-pdf.exporter/issues" target="_blank">open issues</a>.</p>
+        <p>Question? Suggestions? <a href="mailto:bastien.mazeran@autodesk.com">Contact us</a> directly or see our <a href="https://github.com/mazerab/design.automation-nodejs-dwg-data.extractor/issues" target="_blank">open issues</a>.</p>
         <h4>Instructions</h4>
         <ol>
           <li>You need an account on <img src="img/autodesk_text.png" height="15"></li>
@@ -127,7 +127,7 @@
           <li>Open the .XLSX file with MS Excel</li>
           <ul>
         </ol>
-        <center><iframe width="560" height="315" src="https://www.youtube.com/embed/800d2xmQl0s" frameborder="0" allowfullscreen=""></iframe></center>
+        <center><iframe width="640" height="590" src="https://screencast.autodesk.com/Embed/Timeline/9b140800-ad74-4676-afd2-d629c9cecd12" frameborder="0" allowfullscreen webkitallowfullscreen></iframe></center>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
